--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "gaveit-custom-api",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "nodemon index.js"
   },
   "dependencies": {
     "amazon-buddy": "2.2.37",
